Add new product attributes: color and material. Add filtering by price, color and material. Rename catalog item to product and change endpoint URLs
